--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -34,6 +35,8 @@
 
   h3 {
     @apply text-2xl;
+    @apply mt-4;
+    @apply my-2;
   }
 
   h4 {
@@ -49,4 +52,22 @@ p {
 body {
   font-family: Montserrat, serif;
   box-sizing: border-box;
+}
+
+
+a {
+  color: #222222;
+  text-decoration: underline;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+ul {
+  margin: 1rem 2rem;
+}
+
+li {
+  list-style-type: circle;
 }
